[package]
name = "redeem-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.17"
anyhow = "1.0.98"
circles-pathfinder = "0.4.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.19", default-features = false, features = [
    "rustls-tls",
] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
