[package]
name = "redeem-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.17", features = ["contract"] }
anyhow = "1.0.98"
circles-pathfinder = "0.5.1"
dotenv = "0.15.0"
reqwest = { version = "0.13.2", default-features = false }
serde = "1.0.219"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
